--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   width: 300px;
   height: 260px;
   background-color: #282c34;
+  color: #fff;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -17,7 +18,8 @@ body {
 }
 
 .container {
-  padding: 0 16px;
+  padding: 16px;
+  color: #fff;
 }
 
 code {
